# cpp-fundamentals

./: CMakeLists.txt  README.md  benchmark.py  build.ps1  build.sh  main.py  requirements.txt  verify_inference.py
libs/inference_lib/include/: inference_lib.h
libs/inference_lib/src/: inference_lib.cpp
libs/math_lib/include/: math_lib.h
libs/math_lib/src/: math_lib.cpp
src/: bindings.cpp  main.cpp  main_inference.cpp  raii_example.cpp  smart_pointers_example.cpp  stl_example.cpp
